# arx

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: README.md  command_types.rs  commands.rs  config.rs  data.rs  errors.rs  main.rs  utils.rs
tests/: integration.rs
