[package]
name = "arx"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tabled = "0.18.0"
terminal-link = "0.1.0"
